# microdata-job-executor

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .test.env  AGENTS.md  Dockerfile  README.md  SECURITY.md  azure-pipelines.yml  backstage.yaml  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/workflows/: lint_nginx.yml  pr-test.yaml  pr.yaml  test-and-build.yaml  update-tools-version.yaml
job_executor/: app.py
job_executor/adapter/: job_service.py  job_service_adapter.py  kms_client.py  local_storage.py  local_storage_adapter.py  pseudonym_service.py
job_executor/adapter/datastore_api/: __init__.py  models.py
job_executor/adapter/fs/: __init__.py  datastore_files.py  input_files.py  private_keys_directory.py  working_files.py
job_executor/adapter/fs/models/: metadata.py
job_executor/adapter/local_storage/: __init__.py
job_executor/adapter/local_storage/models/: datastore_versions.py  metadata.py
job_executor/common/: exceptions.py
job_executor/config/: __init__.py  environment.py  log.py  secrets.py
job_executor/domain/: datastore.py  datastores.py  models.py  rollback.py  rsa_keys.py
job_executor/domain/manager/: __init__.py
job_executor/domain/worker/: build_dataset_worker.py  build_metadata_worker.py
job_executor/domain/worker/steps/: dataset_decryptor.py  dataset_encryptor.py  dataset_partitioner.py  dataset_pseudonymizer.py  dataset_transformer.py  dataset_validator.py
job_executor/exception/: __init__.py  exception.py
job_executor/manager/: __init__.py
job_executor/model/: __init__.py  data_structure_update.py  datastore.py  datastore_version.py  datastore_versions.py  job.py  maintenance_status.py  metadata.py  metadata_all.py  worker.py
job_executor/worker/: build_dataset_worker.py  build_metadata_worker.py  manager.py  manager_state.py  models.py
job_executor/worker/steps/: dataset_converter.py  dataset_decrypt.py  dataset_decryptor.py  dataset_enricher.py  dataset_partitioner.py  dataset_pseudonymizer.py  dataset_transformer.py  dataset_validator.py
tests/: conftest.py
tests/common/: encrypted_parquet.py
tests/integration/: common.py  test_datastore.py  test_import.py  test_rollback.py
tests/integration/resources/templates/: built_metadata_template.json
tests/local/: runlocal.sh
tests/resources/EMPTY_DATASTORE/datastore/: datastore_versions.json  draft_version.json  metadata_all__DRAFT.json
tests/resources/ROLLBACK_DATASTORE/datastore/: datastore_versions.json  metadata_all__1_0_0.json  metadata_all__DRAFT.json
tests/resources/ROLLBACK_DATASTORE/tmp/: datastore_versions.json  (+2 more)
tests/resources/expected/: KJOENN.json
tests/resources/secrets/: secrets.json
tests/resources/working_directory/: FOEDESTED__DRAFT.json  FOEDESTED__DRAFT.parquet  FOEDSELSVEKT__DRAFT.json  INNTEKT__DRAFT.json  SIVSTAND__DRAFT.json
tests/unit/: test_util.py
tests/unit/adapter/: test_datastore_api.py  test_job_service.py  test_job_service_adapter.py  test_local_storage.py  test_local_storage_adapter.py  test_pseudonym_service.py
tests/unit/config/: test_environment.py
tests/unit/domain/: test_datastore.py  test_datastores.py  test_empty_datastore.py  test_rollback.py
tests/unit/manager/: test_manager.py
tests/unit/model/: test_data_structure_update.py  test_datastore.py  test_datastore_version.py  test_datastore_versions.py  test_empty_datastore.py  test_metadata.py
tests/unit/worker/: test_build_dataset_worker.py  test_build_metadata_worker.py  test_manager.py  test_manager_state.py
wiremock/mappings/: job-service.json  pseudonym-service.json
(+173 files in other folders)
