[project]
name = "job-executor"
version = "0.1.0"
description = ""
authors = [{ name = "Microdata Developers", email = "microdata-dev@ssb.no" }]
requires-python = ">=3.13"
dependencies = [
    "pyarrow>=21.0.0,<22",
    "pydantic>=2.6.1,<3",
    "requests>=2.32.4,<3",
    "pandas>=2.2.1,<3",
    "urllib3>=2.5.0,<3",
    "microdata-tools==1.10.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.0.1,<9",
    "pytest-dotenv>=0.5.2,<0.6",
    "pytest-cov>=6.0.0,<7",
    "requests-mock>=1.9.3,<2",
    "pytest-mock>=3.8.2,<4",
    "ruff>=0.11.0,<0.12",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["job_executor", "tests"]

[tool.ruff]
line-length = 80
target-version = "py313"
lint.select = [
    "F",   # Pyflakes errors (including unused imports, undefined names)
    "T",   # flake8-type-checking (imports used only for typing)
    "E",   # pycodestyle errors (style errors)
    "W",   # pycodestyle warnings
    "I",   # isort import ordering
    "ANN", # type annotation related rules
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN"]
