[project]
name = "job-executor"
version = "0.1.0"
description = ""
authors = [{ name = "Microdata Developers", email = "microdata-dev@ssb.no" }]
requires-python = ">=3.13"
dependencies = [
    "pyarrow==23.0.1",
    "pydantic>=2.13.4,<3",
    "requests>=2.34.2,<3",
    "pandas>=3.0.3,<4",
    "urllib3>=2.7.0,<3",
    "microdata-tools==1.14.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.0,<10",
    "pytest-cov>=7.1.0,<8",
    "requests-mock>=1.9.3,<2",
    "pytest-mock>=3.8.2,<4",
    "ruff>=0.15.19,<0.16",
]

[tool.uv]
package = true
exclude-newer = "7 days"
exclude-newer-package = { "microdata-tools" = "0 hours" }

[tool.setuptools.packages.find]
include = ["job_executor", "tests"]

[tool.ruff]
line-length = 80
target-version = "py313"
lint.select = [
    "F",   # Pyflakes errors (including unused imports, undefined names)
    "T",   # flake8-type-checking (imports used only for typing)
    "E",   # pycodestyle errors (style errors)
    "W",   # pycodestyle warnings
    "I",   # isort import ordering
    "ANN", # type annotation related rules
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN"]
